# application/models/user_model.py
@@ -5,10 +5,10 @@ class UserModel(db.Model):
     __tablename__ = 'user'
 
     id = db.Column(db.Integer, primary_key=True)
-    name = db.Column(db.String(20), unique=True, nullable=True)
+    name = db.Column(db.String(20), nullable=True)
     email = db.Column(db.String(50), unique=True, nullable=False)
-    password = db.Column(db.String(50), unique=True, nullable=False)
-    usergroup = db.Column(db.String(2), unique=True, nullable=True)
-    membership = db.Column(db.String(2), unique=True, nullable=True)
-    membership_starttime = db.Column(db.DateTime, unique=True, nullable=True)
-    membership_endtime = db.Column(db.DateTime, unique=True, nullable=True)
+    password = db.Column(db.String(50), nullable=False)
+    usergroup = db.Column(db.String(2),  nullable=True)
+    membership = db.Column(db.String(2), nullable=True)
+    membership_starttime = db.Column(db.DateTime, nullable=True)
+    membership_endtime = db.Column(db.DateTime, nullable=False)
